feat(auth): 优化Token分页查询性能
- 使用Java 16的Stream.toList()替代collect(Collectors.toList())简化代码
- 保持原有分页逻辑不变的情况下提升代码可读性
- 减少不必要的中间集合操作提高性能

Signed-off-by: PIG AI <wangiegie@gmail.com>