@@ -219,7 +219,7 @@ public class PigTokenEndpoint {
 		int current = MapUtil.getInt(params, CommonConstants.CURRENT);
 		int size = MapUtil.getInt(params, CommonConstants.SIZE);
 		Set<String> keys = redisTemplate.keys(key);
-		List<String> pages = keys.stream().skip((current - 1) * size).limit(size).collect(Collectors.toList());
+		List<String> pages = keys.stream().skip((current - 1) * size).limit(size).toList();
 		Page result = new Page(current, size);
 
 		List<TokenVo> tokenVoList = redisTemplate.opsForValue().multiGet(pages).stream().map(obj -> {
@@ -239,7 +239,7 @@ public class PigTokenEndpoint {
 					DatePattern.NORM_DATETIME_PATTERN);
 			tokenVo.setIssuedAt(issuedAt);
 			return tokenVo;
-		}).collect(Collectors.toList());
+		}).toList();
 		result.setRecords(tokenVoList);
 		result.setTotal(keys.size());
 		return R.ok(result);
